--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/pic.png" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/Pic.png" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
