--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
 	  
         <div class="col-sm-12" >
           <div class="copyright-box">
-            <p class="copyright" style = "font-size:1%">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
+            <p class="copyright" style = "font-size:1%">&copy; Copyright <strong></strong>. All Rights Reserved</p>
             <div class="credits" style = "font-size:1%">
               <!--
               All the links in the footer should remain intact.
@@ -628,7 +628,7 @@
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
             -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+              
             </div>
           </div>
         </div>
