--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
                         <li><a href="mailto:jindalkanika02@gmail.com" target = "_blank"><span class="ico-circle"><i class="ion-android-mail"></i></span></a></li>
                         <li><a href="https://github.com/jindalkanika" target = "_blank"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
 		        <li><a href="https://www.youtube.com/channel/UCR1bgsuXHmXWDXJlua1mK4Q" target = "_blank"><span class="ico-circle"><i class="ion-social-youtube"></i></span></a></li>
-                          		        <li><a href="https://medium.com/@jindalkanika02" target = "_blank"><span class="ico-circle"><i class="ion-ios-book"></i></span></a></li>
+                          		        <li><a href="https://medium.com/@jindalkanika02" target = "_blank"><span class="ico-circle"><i class="ion-ios-paper"></i></span></a></li>
                       </ul>
                     </div>
                   </div>
