--- a/index.html
+++ b/index.html
@@ -601,11 +601,11 @@
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">
-                LATEST ARTICLES AND BLOGS
+                MY ARTICLES AND BLOGS
               </h3>
               <p class="subtitle-a">
                           
-                Sharing is caring!!
+                Sharing is caring!
               
               </p>
               <div class="line-mf"></div>
