--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
               </h3>
               <p class="subtitle-a">
                           
-                Sharing is caring!
+                Sharing is <strong>caring </strong>!
               
               </p>
               <div class="line-mf"></div>
