--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#projects">Projects</a>
           </li>
-          <li><a class="nav-link js-scroll" href="#blogs">Articles and blogs</a></li>
+          <li><a class="nav-link js-scroll" href="#blogs">Blogs</a></li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
           </li>
@@ -624,11 +624,11 @@
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">
-                LATEST ARTICLES AND BLOGS
+                MY ARTICLES AND BLOGS
               </h3>
               <p class="subtitle-a">
                           
-               Sharing is caring !!
+               Sharing is <strong>caring </strong>!
               
               </p>
               <div class="line-mf"></div>
