--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
     <div class="intro-content display-table">
       <div class="table-cell">
         <div class="container">
-          <!--<p class="display-6 color-d">Hello, world!</p>-->
+         <p class="display-6 color-d" style = "font-size: 110%">print(<strong>"Hello, World"</strong>)</p>
           <h1 class="intro-title mb-4">I am Kanika Jindal</h1>
 		  			
-          <p class="intro-subtitle"><span class="text-slider-items">Machine Learning Scientist, Data Analyst, Software Engineer,Singer - Songwriter </span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">I can advice you on a AI/ML solution, I can analyze your  Data, I can suggest you a latest Software Engg. practice, I am a Singer - Songwriter, I am a Blogger</span><strong class="text-slider"></strong></p>
 		  
           <!--<p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">About Me</a></p> -->
         </div>
@@ -588,6 +588,7 @@
             </div>
           </div>
 
+<!--
 		   <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
@@ -614,6 +615,7 @@
               </div>
             </div>
           </div>
+-->
 		  </div>
 		</div>		
       </div>
