--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a class="nav-link js-scroll" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#certifications">Certifications</a>
+            <a class="nav-link js-scroll" href="#certifications">Certifications and MOOCs</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#projects">Projects</a>
