--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
   </nav>
 
-  <!-- ======= Intro Section ======= -->
+  <!-- ======= Introduction Section ======= -->
   <div id="home" class="intro route bg-image" style="background-image: url(assets/img/loo.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
@@ -75,7 +75,7 @@
         </div>
       </div>
     </div>
-  </div><!-- End Intro Section -->
+  </div><!-- End Introduction Section -->
 
   <main id="main">
 
