--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <p><span class="title-s">Profile: </span> <span>Machine Learning Scientist</span></p>
                         <p><span class="title-s">Email: </span> <span>jindalkanika02@gmail.com</span></p>
                         
-			<p><span class="title-s">Current Location: </span> <span>New Delhi, India</span></p>
+			<p><span class="title-s">Current Location: </span> <span>Los Angeles, California</span></p>
 			
 			<p class = "pt-3"><span class = "title-s"> <a class="btn btn-primary btn px-4" href = "assets/img/resume.pdf" target = "_blank" role = "button"> View Resume </a></span>
                       </div>
@@ -147,14 +147,15 @@
                       </h5>
                     </div>
 		    <p class= "lead">
-		    I am working as a Machine Learning R&D Engineer at Sopra Steria, Noida, India from August, 2019.
+		    I am a graduate student at University of Southern California, pursuing Master's in Computer Science. 
+			    I had worked as a Machine Learning R&D Engineer at Sopra Steria, Noida, India from August, 2019 to Jan, 2021.
                     </p>
                     <p class="lead">
 		    I have graduated in 2019 as a Bachelors of Technology (B.Tech) in Computer Science and Engg. 
 		    from Guru Gobind Singh Indraprastha University, Delhi.
                     </p>
                     <p class="lead">
-		    My day to day majorly involves on building data stories, predictive models and work with various machine learning algorithms
+		    In my last professional experience, my day to day majorly involved on building data stories, predictive models and work with various machine learning algorithms
 		    to develop POCs important for the development of the organization.
                     </p>
 		    <p class="title-s" class = "lead">Libraries and Tools:</p>
