--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     </div>
 		    <p class= "lead">
 		    I am a graduate student at University of Southern California, pursuing Master's in Computer Science. </p>
-			  <p>
+			  <p class = "lead">
 			    I worked as a Machine Learning R&D Engineer at Sopra Steria, Noida, India from August, 2019 to Jan, 2021.
                     </p>
                     <p class="lead">
