--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 		    from Guru Gobind Singh Indraprastha University, Delhi.
                     </p>
                     <p class="lead">
-		    In my last professional experience, my day to day majorly involved on building data stories, predictive models and work with various machine learning algorithms
+		    In my last professional experience, my day to day majorly involved building data stories, predictive models and work with various machine learning algorithms
 		    to develop POCs important for the development of the organization.
                     </p>
 		    <p class="title-s" class = "lead">Libraries and Tools:</p>
@@ -787,7 +787,7 @@
 			
                       
                       <ul class="list-ico">
-                        <li><span class="ion-ios-location"></span> Downtown, Los Angeles, CA, United States</li>
+                        <li><span class="ion-ios-location"></span> Los Angeles, CA</li>
                         <li><span class="ion-ios-telephone"></span> (+1) 213-421-9008</li>
                         <li><span class="ion-email"></span> jindalkanika02@gmail.com</li>
 			<li><span class="ion-email"></span> kjindal@usc.edu</li>
