--- a/index.html
+++ b/index.html
@@ -375,7 +375,31 @@
               </div>
             </div>
           </div>
-		  		  
+
+          <div class="row">
+            <div class="col-md-4">
+              <div class="card card-blog">
+                <div class="card-img">
+                  <a href = "https://github.com/jindalkanika/Checker-s-Game-Agent.git" target = "_blank"><img src="assets/img/checkers-app.jpg" alt="" class="img-fluid"></a>
+                </div>
+  
+                <div class="card-body">
+                  <div class="card-category-box">
+                    <div class="card-category">
+                      <h6 class="category">Analytics</h6>
+                    </div>
+                  </div>
+  
+                  <h3 class="card-title"><a href="https://github.com/jindalkanika/Checker-s-Game-Agent.git" target = "_blank"  
+  >
+      FootFall</a></h3>
+                  <p class="card-description">
+      Checker's game agent for 8 by 8 board built using MinMax Algorithm implemented in Python. This was done as project in CSCI - 561.
+                  </p>
+  
+                </div>
+              </div>
+            </div>		  		  
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
@@ -528,6 +552,32 @@
 		No copyrights</a></h3>
                 <p class="card-description">
 			Compare the input document to the internet resources present and checks for plagiarism. The project is completed as part of MLE Nanodegree on Udacity. 
+			
+                </p>
+
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card card-blog">
+              <div class="card-img">
+                <a href = "https://github.com/jindalkanika/Search-Algorithms-Implementation.git" target = "_blank">
+				<img src="assets/img/tree.png" alt="" class="img-fluid"></a>
+              </div>
+
+
+              <div class="card-body">
+                <div class="card-category-box">
+                  <div class="card-category">
+                    <h6 class="category">NLP</h6>
+                  </div>
+                </div>
+
+                <h3 class="card-title"><a href="https://github.com/jindalkanika/Search-Algorithms-Implementation.git" target = "_blank">
+				
+		No copyrights</a></h3>
+                <p class="card-description">
+			Implemented  BFS, UCS and A* search algorithms using Python.  
 			
                 </p>
 
