--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </nav>
 
   <!-- ======= Intro Section ======= -->
-  <div id="home" class="intro route bg-image" style="background-image: url(assets/img/usc.jpg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(assets/img/usc_new.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
