--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </nav>
 
   <!-- ======= Intro Section ======= -->
-  <div id="home" class="intro route bg-image" style="background-image: url(assets/img/usc_new.jpg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(assets/img/usc_.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
@@ -189,7 +189,7 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        
 
 
           <div class="col-md-3">
